fixed cosmetic dragging problems on IE

--- a/htdocs/css/gbrowse.css
+++ b/htdocs/css/gbrowse.css
@@ -5,6 +5,8 @@ A:visited         { text-decoration: none;
                     color: #AA0088;
                   }
 A:hover           { text-decoration: underline; 
+		    color: black;
+		    background:lightsteelblue;
                   }
 A.banner          { color  : #FFFFFF;
                     font-size : small;
